[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p1255"
description = "PeakTech P1255 Oscilloscope Tool"
# the list of authors is ordered alphabetically by last name
authors = [
	{ name="Michael Hohenstein", email="michael@hohenste.in" },
]
readme = "README.md"
requires-python= ">=3.10"
keywords = ["Oscilloscope"]
version="0.0.1"
license = {text = "GPL3"}
classifiers = [
        #"Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Topic :: Education",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/MitchiLaser/p1255"
"Repository" = "https://github.com/MitchiLaser/p1255"

[tool.black]
line-length = 150

[tool.isort]
profile = "black"

